lib/libremidi/tests/corpus/Invalid/No Header Chunk/tinh_thoi_xot_xa.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|17 Aug 2000 10:08:09 -0000
vti_author:SR|khoa_dinh
vti_modifiedby:SR|khoa_dinh
vti_timecreated:TR|17 Aug 2000 09:57:29 -0000
vti_backlinkinfo:VX|home.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\my documents\\my webs/c\:/my documents/my webs:TR|17 Aug 2000 10:08:09 -0000
vti_nexttolasttimemodified:TR|17 Aug 2000 10:08:09 -0000
